--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
+/* ----- Banner ----- */
+#banner {
+  min-height: 300px;
+  color: #FFF;
+  background: center center no-repeat #022f41;
+  background-size: cover;
+}
+
+#banner a {
+  color: #FFF;
+}
+
+#banner .wrapper {
+  display: flex;
+  align-items: center;
+  min-height: inherit;
+}
+
+#banner .content {
+  width: 100%;
+  padding: 100px 0 40px 0;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#banner .content h1 {
+  margin: 0 0 10px 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#banner .content h2 {
+  max-width: 580px;
+  margin: 0 auto;
+  color: #F9B02A;
 }
